injection/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-nightmare
  annotations:
    nginx.ingress.kubernetes.io/auth-url: xxx
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kubernetes
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
